2002-11-29  Ross Burton  <ross@burtonini.com>

	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
	dist, not the generated files.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* gyahtzee.c: s/Gnome/GNOME/, for #99683.

	* gtali.schemas.in: Fix the file, the <default> was in the wrong
	location.

2002-11-22  Tim Musson  <trmusson@ihug.co.nz>

	* gyahtzee.c: (about), (ShowHighScores): No more multiple About
	dialogs, and Score dialog is now modal. (#97320)
	* setup.c: (setup_game): gtk_window_present existing Prefs dialog.

2002-11-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fixed the GConf install location, thanks to Loz
	<gnome2@flower.powernet.co.uk>. Closes #99393.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gtali.desktop.in: add X-GNOME-BUGZILLA stuff

2002-08-23  Ross Burton  <ross@burtonini.com>

	* gyahtzee.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-06-22  Ross Burton  <ross@burtonini.com>

	* gyahtzee.c: Make the window pointer public, instead of
	static. Also stop passing it around via the menu callbacks.

	* setup.c (setup_game): Set the relevant hints so that the setup
	dialog actually behaves like a dialog, not a window.
	
2002-06-03  Ross Burton  <ross@burtonini.com>

	* gyahtzee.c: Set the about window as a transient for the
	top-level window.

	* setup.c (setup_game): The preferences dialog should not appear
	under the mouse, but should state that it is a transient for the
	parent window.

2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/gtali-C.omf: updated for new format of SK 0.3.8.
	
2002-04-30  Abel Cheung  <maddog@linux.org.hk>

	* cyahtzee.c: Add translator note for some strings.

2002-04-28  Andreas Persenius  <ndap@telia.com>

	* setup.c: Replace gtk_signal_connect() with g_signal_connect().
	Replace gtk_container_border_width() with
	gtk_container_set_border_width().