@@ -16,7 +16,7 @@
      <version identifier="2.0" date="2002-05-05" description="Updated to full OMF format"/>
      <subject category="GNOME|Games"/>
      <description>
-    Gnome Tali is a sort of poker with dice and less money. You roll five dice three times and try to create the best hand. Your two rerolls may include any or all of your dice.
+    GNOME Tali is a sort of poker with dice and less money. You roll five dice three times and try to create the best hand. Your two rerolls may include any or all of your dice.
    </description>
      <type>
      user's guide
