@@ -1,3 +1,8 @@
+2002-12-11  Ross Burton  <ross@burtonini.com>
+
+	* help/C/gtali.xml:
+	* help/C/gtali-C.omf: More s/Gnome/GNOME/.
+
 2002-11-29  Ross Burton  <ross@burtonini.com>
 
 	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
